# com.github.openresty-lua-cjson

./: CMakeLists.txt  build_artifact.py  dependency-log.xml
lua-cjson/: CMakeLists.txt
lua-cjson/installer/lua5.1/: lua-cjson.xml
lua-cjson/installer/lua5.4/: lua-cjson.xml
lua-cjson/patches/: 001_remove_find_lua_to_specify_variables_by_hand.diff  002_set_install_folder.diff
